WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85032
[EFL][DRT] EFL's DRT does not fully support page visibility
https://bugs.webkit.org/show_bug.cgi?id=85032
Summary
[EFL][DRT] EFL's DRT does not fully support page visibility
Chris Dumez
Reported
2012-04-26 23:51:50 PDT
setPageVisibility() and resetPageVisibility() need to be implemented in EFL's LayoutTestController.
Attachments
Patch
(11.34 KB, patch)
2012-04-27 01:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(12.03 KB, patch)
2012-05-02 03:04 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(4.46 KB, patch)
2012-05-06 23:25 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-04-27 01:37:16 PDT
Created
attachment 139148
[details]
Patch
Chris Dumez
Comment 2
2012-05-02 03:04:01 PDT
Created
attachment 139779
[details]
Patch Rebase on master and call DumpRenderTreeSupportEfl::resetPageVisibility() from DumpRenderTreeChrome::resetDefaultsToConsistentValues() for safety.
Raphael Kubo da Costa (:rakuco)
Comment 3
2012-05-06 18:48:57 PDT
Comment on
attachment 139779
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=139779&action=review
> Tools/ChangeLog:8 > + Implement page visibility API support in EFL's DRT.
This is a very laconic description :-) Not only do you plug the EFL bits, but you also fix the argumentCount check in LTC and add stubs to the other ports' LTCs, so a better description (either here or in the method list below) would be very welcome.
> Tools/DumpRenderTree/LayoutTestController.cpp:1746 > // Has mac & windows implementation
I think this comment can go away too.
> Tools/DumpRenderTree/blackberry/LayoutTestControllerBlackBerry.cpp:902 > + // FIXME: implement.
We generally add a notImplemented() call instead (this applies to all the other FIXME comments).
Chris Dumez
Comment 4
2012-05-06 23:17:33 PDT
It seems there is some overlap with Samsung's patch at
Bug 85347
(which already landed). I will rebase my patch since some functionality is missing in Samsung's patch.
Chris Dumez
Comment 5
2012-05-06 23:25:55 PDT
Created
attachment 140483
[details]
Patch Rebase patch due to
Bug 85347
. Remaining in the patch: - Properly reset visibility state between tests - Add support for "preview" visibility state - Fix argumentCount check in resetPageVisibilityCallback() - Unskip remaining page visibility tests in EFL
Gyuyoung Kim
Comment 6
2012-05-06 23:52:11 PDT
Comment on
attachment 140483
[details]
Patch Looks fine to me.
Raphael Kubo da Costa (:rakuco)
Comment 7
2012-05-07 08:03:00 PDT
Comment on
attachment 140483
[details]
Patch Looks great, thank you.
WebKit Review Bot
Comment 8
2012-05-08 06:56:37 PDT
Comment on
attachment 140483
[details]
Patch Clearing flags on attachment: 140483 Committed
r116416
: <
http://trac.webkit.org/changeset/116416
>
WebKit Review Bot
Comment 9
2012-05-08 06:56:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug