[EFL][DRT] EFL's DRT does not fully support page visibility https://bugs.webkit.org/show_bug.cgi?id=85032

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-08
Reviewed by Antonio Gomes.

Tools:

* DumpRenderTree/LayoutTestController.cpp:
(resetPageVisibilityCallback): Fix incorrect argumentCount check.
* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::resetDefaultsToConsistentValues): Properly
reset page visibility setting between tests.
* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::setPageVisibility): Add support for "preview"
visibility state.

LayoutTests:

Unskip remaining page visibility test cases now that the functionality
is fully implemented in EFL port.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/103469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116416 268f45cc-cd09-0410-ab3c-d52691b4dbfc